--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -45,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:8000"
+  "proxy": "http://localhost:8000"
 }
